<resources>
    <string name="app_name">Digitando</string>
    <string name="btnJogar">Jogar</string>
    <string name="btnSair">Sair</string>
    <string name="fases">Nível de Dificuldade</string>
    <string name="btnFacil">Fácil</string>
    <string name="btnDificil">Difícil</string>
    <string name="btnMedio">Médio</string>
    <string name="moduloFacil1">Módulo 1</string>
    <string name="moduloFacil2">Módulo 2</string>
    <string name="moduloFacil3">Módulo 3</string>
    <string name="faseFacil">Nível Fácil</string>
    <string name="faseMedio">Nível Médio</string>
    <string name="faseDificil">Nível Difícil</string>
    <string name="tempoRestante">Tempo Restante</string>
    <string name="digite">Digite a palavra</string>
    <string name="tempoFacil">60</string>
    <string name="tempoMedio">70</string>
    <string name="tempoDificil">90</string>
    <string name="enviar">Enviar</string>
    <string name="proxima">Próxima Palavra</string>
    <string name="proximoModulo">Próximo Módulo</string>
    <string name="parabensProxModulo">Parabéns!</string>
    <string name="avancouProxModulo">Você avançou de Módulo!</string>
    <string name="estaProntoProxModulo">Está Pronto para mais um?</string>
    <string name="errou">Tente Novamente</string>
    <string name="erro1">Ops!</string>
    <string name="erro2">O correto seria:</string>
    <string name="acertou1">Parabéns!</string>
    <string name="acabou">Você finalizou o jogo!</string>
    <string name="acertou2">Você</string>
    <string name="acertou3">Acertou !!!</string>
    <string name="finalizar_sair">Sair</string>
    <string name="finalizar_zerar">Reiniciar</string>
    <string name="avancouNivel">Você avançou de nível!</string>
    <string name="proximoNivel">Próximo Nível</string>
    <string name="tempoEsgotado">O tempo esgotou!</string>

</resources>
