<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fases">

    <TextView
        android:id="@+id/textView"
        android:layout_width="291dp"
        android:layout_height="98dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center|center_horizontal"
        android:text="@string/fases"
        android:textColor="#FBB002"
        android:textSize="30sp"
        app:fontFamily="@font/basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFacil"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/propriedade_button"
        android:text="@string/btnFacil"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnMedio"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/propriedade_button"
        android:text="@string/btnMedio"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnFacil"
        app:layout_constraintTop_toBottomOf="@+id/btnFacil" />

    <Button
        android:id="@+id/btnDificil"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/propriedade_button"
        android:text="@string/btnDificil"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnMedio"
        app:layout_constraintTop_toBottomOf="@+id/btnMedio" />
</android.support.constraint.ConstraintLayout>