<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#294397"
    tools:context=".Jogo_Finalizado">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/desenho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        app:srcCompat="@drawable/desenho" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/botao_final"
        android:text="@string/finalizar_zerar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/btnFinal"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/botao_final"
        android:text="@string/btnSair"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnReiniciar"
        app:layout_constraintEnd_toStartOf="@+id/btnReiniciar"
        app:layout_constraintTop_toTopOf="@+id/btnReiniciar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/acertou1"
        android:textColor="#FDB101"
        android:textSize="30sp"
        app:fontFamily="@font/basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/acabou"
        android:textColor="#FDB101"
        android:textSize="30sp"
        app:fontFamily="@font/basic"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
</android.support.constraint.ConstraintLayout>