<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6C481"
    tools:context="@string/fraseErro1">

    <Button
        android:id="@+id/btnTenteNovamente"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/button_errou"
        android:text="@string/errou"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="158dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/warning1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/erro1"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="@font/basic"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="112dp"
        android:gravity="center"
        android:text="@string/erro2"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="@font/basic"
        app:layout_constraintBottom_toTopOf="@+id/btnTenteNovamente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPalavraCorreta"
        android:layout_width="293dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTenteNovamente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</android.support.constraint.ConstraintLayout>